aks/15_ingress_controller/ingress-appgw.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-appgw
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: my-simple-website-svc
            port:
              number: 80
        pathType: Exact
